--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "babylonjs": "^8.38.0",
-    "babylonjs-loaders": "^8.38.0",
+    "@gsap/react": "^2.1.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
+    "@types/three": "^0.181.0",
     "firebase": "^12.6.0",
+    "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.554.0",
+    "maath": "^0.10.8",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
